k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-detection
  labels:
    app.kubernetes.io/part-of: fraud-detection-platform
    istio-injection: disabled
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: "[]"
